--- a/photography page/index.html
+++ b/photography page/index.html
@@ -5,10 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CSS Project</title>
-    <link rel="stylesheet" href="style.css"/>
+    <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;400&display=swap" rel="stylesheet">
     <link
       href="https://fonts.googleapis.com/css2?family=Poppins&display=swap"
       rel="stylesheet"
@@ -31,7 +30,7 @@
         <div class="logo">
           <a href="#">Apna College</a>
         </div>
-        
+
         <div class="btn_two">
           <label for="check" style="color: grey">
             <i class="fa-solid fa-xmark"></i>
@@ -81,5 +80,5 @@
         </div>
       </div>
     </div>
-  </body>
+  </body>
 </html>
