--- a/sundown/index.html
+++ b/sundown/index.html
@@ -30,7 +30,12 @@
                     INSPIRE</h1>
             </div>
         </div>
-        <video src="video.mp4" autoplay loop muted>video</video>
+        <div id="hero-shape">
+            <div id="hero-1"></div>
+            <div id="hero-2"></div>
+            <div id="hero-3"></div>
+        </div>
+        <!-- <video src="video.mp4" autoplay loop muted>video</video> -->
     </div>
    </div>
     <script src="script.js"></script>
